# quickscan-invoices

./: .gitignore  CLAUDE.md  README.md  app.py  copy-dist.bat  export.py  field_extractor.py  invoice_config.json  invoice_config.py  main.py  ocr_engine.py  package.json  requirements.txt  start.bat  styles.css
.claude/: settings.local.json
.trae/rules/: project_rules.md
docs/superpowers/plans/: 2026-04-29-invoice-ocr-refactor-plan.md  2026-05-09-fastapi-native-frontend-plan.md  2026-05-12-tauri2-desktop-packaging-plan.md
docs/superpowers/specs/: 2026-04-29-invoice-ocr-refactor-design.md  2026-05-09-fastapi-native-frontend-design.md  2026-05-12-tauri2-desktop-packaging-design.md
sidecar/: build_sidecar.bat  sidecar.spec  sidecar_app.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_export.py  test_field_extractor.py
