[package]
name = "quickscan-invoices"
version = "1.0.0"
description = "QuickScan Invoices - Invoice OCR Desktop App"
authors = []
edition = "2021"

[lib]
name = "quickscan_invoices_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "quickscan-invoices"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portpicker = "0.1"
